--- a/1index.html
+++ b/1index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Event</title>
-        <link rel="icon" href="C:\Users\john\Desktop\PREMKUMAR\html-youtube-tutorial-main\html-youtube-tutorial-main\Event Management HTML Project\starter\img\date.png">
+        <link rel="icon" href="date.png">
     </head>
     <body bgcolor="Black" style="color: white;">
         <center>
@@ -13,7 +13,7 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est tempore minima obcaecati natus incidunt, vel provident? Eligendi aliquid nulla adipisci quis, dolor voluptas sit modi, optio iure illo officiis repudiandae.Lorem ipsum dolor sit amet consectetur adipisicing elit. Est tempore minima obcaecati natus incidunt, vel provident? Eligendi aliquid nulla adipisci quis, dolor voluptas sit modi, optio iure illo officiis repudiandae.Lorem ipsum dolor sit amet consectetur adipisicing elit. Est tempore minima obcaecati natus incidunt, vel provident? Eligendi aliquid nulla adipisci quis, dolor voluptas sit modi, optio iure illo officiis repudiandae.Lorem ipsum dolor sit amet consectetur adipisicing elit. Est tempore minima obcaecati natus incidunt, vel provident? Eligendi aliquid nulla adipisci quis, dolor voluptas sit modi, optio iure illo officiis repudiandae.Lorem ipsum dolor sit amet consectetur adipisicing elit. Est tempore minima obcaecati natus incidunt, vel provident? Eligendi aliquid nulla adipisci quis, dolor voluptas sit modi, optio iure illo officiis repudiandae.
         </p>
         <center>
-        <img src ="C:\Users\john\Desktop\PREMKUMAR\html-youtube-tutorial-main\html-youtube-tutorial-main\Event Management HTML Project\starter\img\event1.png">
+        <img src ="event1.png">
         <h1>
             Photo Gallery HD
         </h1>
@@ -23,7 +23,7 @@
          </center>
          <hr>
          <center>
-             <img src="C:\Users\john\Desktop\PREMKUMAR\html-youtube-tutorial-main\html-youtube-tutorial-main\Event Management HTML Project\starter\img\event2.png">
+             <img src="event2.png">
              <h1>
                  <a href="https://www.myntra.com/?utm_source=dms_google&utm_medium=searchbrand_cpc&utm_campaign=dms_google_searchbrand_cpc_Search_Brand_Myntra_Brand_India_BM_TROAS_SOK_New&gad_source=1&gclid=CjwKCAjw4_K0BhBsEiwAfVVZ_2orJORXQFKH0Tknad_r8A9KdTfVA9g1xsDz0IElgH92Gd5-N0EXzxoCOe0QAvD_BwE">Fashion Design</a>
 
