--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
        <div class="Activities">
           <H1 class="Head">Activities</H1>
            <ul>
-            <li><a href="Event1.html">file:///C:/Users/john/Desktop/PREMKUMAR/Event1.html\Event</a></li>
+            <li><a href="1index.html">file:///C:/Users/john/Desktop/PREMKUMAR/Event1.html\Event</a></li>
 
         </ul><br>
         <h1>Shepherd Program</h1>
